WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190953
hashSet.remove(hashSet.random()) doesn't build
https://bugs.webkit.org/show_bug.cgi?id=190953
Summary
hashSet.remove(hashSet.random()) doesn't build
Antti Koivisto
Reported
2018-10-26 05:09:27 PDT
Const version of random() is wrong.
Attachments
patch
(3.12 KB, patch)
2018-10-26 05:15 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2018-10-26 05:15:54 PDT
Created
attachment 353176
[details]
patch
Chris Dumez
Comment 2
2018-10-26 08:42:09 PDT
Comment on
attachment 353176
[details]
patch r=me
WebKit Commit Bot
Comment 3
2018-10-26 09:27:34 PDT
Comment on
attachment 353176
[details]
patch Clearing flags on attachment: 353176 Committed
r237461
: <
https://trac.webkit.org/changeset/237461
>
WebKit Commit Bot
Comment 4
2018-10-26 09:27:36 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-10-26 09:28:28 PDT
<
rdar://problem/45589738
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug