hashSet.remove(hashSet.random()) doesn't build https://bugs.webkit.org/show_bug.cgi?id=190953

Reviewed by Chris Dumez.

Source/WTF:

* wtf/HashSet.h:

Remove non-const random(). HashSet only returns const iterators (it is immutable via iterator).

* wtf/HashTable.h:
(WTF::HashTable::random const):

Invoke const_iterator() by using static_cast<> instead of trying to do it directly.

Tools:

* TestWebKitAPI/Tests/WTF/HashSet.cpp:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/205795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237461 268f45cc-cd09-0410-ab3c-d52691b4dbfc